# SnakeGame

./: CMakeLists.txt  README.MD  fruit.cpp  fruit.hpp  main.cpp  snake.cpp  snake.hpp
include/: fruit.hpp
src/: fruit.cpp  main.cpp  snake.cpp
